--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+<div class="container">
+
+    <h1>tiles</h1>
     <div id="gamefield">
         <div id="background"></div>
         <div id="items"></div>
@@ -16,5 +18,6 @@
         </div>
     </div>
     <script src="script.js"></script>
+</div>
 </body>
 </html>
